--- a/index.html
+++ b/index.html
@@ -1,69 +1,39 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>안암 뭐 먹지?</title>
-		<style>
-			body {
-				background-color: antiquewhite;
-				color: black;
-				text-align: center;
-				font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-					Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-					"Helvetica Neue", sans-serif;
-				margin: 0;
-				padding: 0;
-				border: 0;
-			}
 
-			.title {
-				font-weight: lighter;
-				padding-top: 40px;
-				font-size: 50px;
-			}
+<head>
+    <meta charset="utf-8" />
 
-			.context {
-				font-size: 20px;
-				font-weight: lighter;
-				padding: 20px;
-				padding-bottom: 30px;
-			}
+    <title>안암 뭐 먹지?</title>
+    <link rel="stylesheet" href="./css/index.css" />
 
-			.form {
-				background-color: #7b031d;
-				color: white;
-				padding: 10px;
-			}
+    <meta http-equiv="refresh" content="4; url=index2.html">
+</head>
 
-			.div-anam {
-				padding: 10px;
-			}
-		</style>
-	</head>
+<body>
+    <div class="koreaForm">
+        <h1 class="title">안암 뭐 먹지?</h1>
+        <hr style="width: 10rem;">
+        <p class="mainContext">
+            안암에 사는 용욱이는 친구인 주한이와 밥을 먹고자 한다.<br />
+            누군가 친구는 서로 비슷한 사람들끼리 만난다고 했던가?<br />
+            용욱이도 주한이도 너무 깐깐해서 뭘 먹어야 할 지 정하는 데에만
+            매일 한세월이 걸렸다.<br />
+            <br />
+            서로서로를 깐깐하다고 언플하며 둘의 이미지만 계속 까여가는
+            상황을 타계하고자,<br />
+            컴퓨터학과에 다니고 있던 용욱이는 자신이 좋아하는 프로그래밍으로
+            이를 해결하고자 한다.
+        </p>
+    </div>
+    <div class="anamForm">
+        <p class="mainContext">
+            > 오늘은 어떤 음식을 드시고 싶으신가요?
+        </p>
+    </div>
+    <footer>
+        <p> © hyperflow@developers_high 2020, all rights reserved.</p>
+    </footer>
+</body>
 
-	<body>
-		<div class="form">
-			<h1 class="title">안암 뭐 먹지?</h1>
-			<hr/ style="width: 10rem;">
-			<p class="context">
-				안암에 사는 용욱이는 친구인 주한이와 밥을 먹고자 한다.<br />
-				누군가 친구는 서로 비슷한 사람들끼리 만난다고 했던가?<br />
-				용욱이도 주한이도 너무 깐깐해서 뭘 먹어야 할 지 정하는 데에만
-				매일 한세월이 걸렸다.<br />
-				<br />
-				서로서로를 깐깐하다고 언플하며 둘의 이미지만 계속 까여가는
-				상황을 타계하고자,<br />
-				컴퓨터학과에 다니고 있던 용욱이는 자신이 좋아하는 프로그래밍으로
-				이를 해결하고자 한다.
-			</p>
-		</div>
-		<div class="div-anam">
-			<p class="context">
-                > 오늘은 어떤 음식을 드시고 싶으신가요?
-            </p>
-        </div>
-        <footer>
-            <p> © hyperflow@developers_high 2020, all rights reserved.</p>
-        </footer>
-	</body>
 </html>
