--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
     <div class="anamForm">
         <img src="./images/title.png" />
     </div>
+
     <div>
     <table class="filterTable">
         <tr>
@@ -157,6 +158,11 @@
         </tr>
     </table>
     </div>
+
+    <script src="js/localizingFood.js"></script>
+    <script src="js/foodappend.js"></script>
+    <!-- 스크립트가 여기있어야 여기에 만들어짐! -->
+
     <div class="checktest">
         <input class="js-check1" type="checkbox" name="chbox1" value="공동" checked="true">test
 
@@ -165,6 +171,8 @@
         </div>
     </div>
     
+    <!-- <script src="js/tagfilter.js"></script> -->
+
     <script src="js/placeFilter.js"></script>
     <script src="js/serviceFilter.js"></script>
     <script src="js/evaluationFilter.js"></script>
